--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/RetroMeras/practice-project-back#readme",
   "dependencies": {
+    "@types/knex": "^0.16.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "knex": "^2.3.0",
+    "sqlite3": "^5.1.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
